--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -274,7 +274,8 @@
     }
 
     .main-hero_form.opened {
-        top: 130px;
+        top: 50% !important;
+        transform: translate(-50%, -50%);
     }
 
     .swiper-achievement {
@@ -394,7 +395,6 @@
         margin-top: 0;
     }
 
-
     .main-hero_up {
         width: 50px;
         height: 50px;
@@ -412,8 +412,6 @@
     .main-achievement {
         padding-top: 0;
     }
-
-
 
     .main-about_item {
         margin-top: 40px;
@@ -444,5 +442,25 @@
 
     .main-achievement_heading {
         font-size: var(--size-small-heading);
+    }
+
+    .main-achivement_carousel_second .swiper-slide img {
+        width: 100%;
+    }
+
+    .main-hero_form_heading {
+        font-size: var(--size-small-heading);
+    }
+
+    .main-hero_form_info_wrapper label {
+        font-size: var(--size-small-text);
+    }
+
+    .main_hero_form_name {
+        font-size: var(--size-small-text) !important;
+    }
+
+    .main_hero_form_phone_num {
+        font-size: var(--size-small-text) !important;
     }
 }
