--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -618,7 +618,7 @@ header.scrolled .logo img {
     padding: 50px;
     top: -1020px;
     left: 50%;
-    transform: translateX(-50%, -50%);
+    transform: translate(-50%, -50%);
     box-shadow: 0px 15px 50px rgba(0, 0, 0, 0.05),
         inset 0px 22px 35px rgba(255, 255, 255, 0.25);
 }
