--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -230,6 +230,21 @@
         justify-content: center;
         align-items: center;
     }
+
+    .main-hero_form {
+        position: fixed;
+        z-index: 1001;
+        background: var(--color-dark-gray);
+        border-radius: 20px;
+        padding: 20px;
+        padding-top: 40px;
+        width: 70%;
+        top: -1020px;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        box-shadow: 0px 15px 50px rgba(0, 0, 0, 0.05),
+            inset 0px 22px 35px rgba(255, 255, 255, 0.25);
+    }
 }
 
 @media screen and (max-width:600px) {
@@ -352,19 +367,8 @@
         padding: 200px 0 0 0px !important;
     }
 
-    .main-hero_form {
-        position: fixed;
-        z-index: 1001;
-        background: var(--color-dark-gray);
-        border-radius: 20px;
-        padding: 20px;
-        padding-top: 40px;
-        width: 90%;
-        top: -1020px;
-        left: 50%;
-        transform: translateX(-50%);
-        box-shadow: 0px 15px 50px rgba(0, 0, 0, 0.05),
-            inset 0px 22px 35px rgba(255, 255, 255, 0.25);
+    .main-hero_form_heading {
+        margin-bottom: 0;
     }
 
     .main-hero_form.opened {
@@ -427,6 +431,21 @@
         margin-bottom: 5px;
         position: relative;
         left: -2px;
+    }
+
+    .main-hero_form {
+        position: fixed;
+        z-index: 1001;
+        background: var(--color-dark-gray);
+        border-radius: 20px;
+        padding: 12px;
+        padding-top: 40px;
+        width: 90%;
+        top: -1020px;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        box-shadow: 0px 15px 50px rgba(0, 0, 0, 0.05),
+            inset 0px 22px 35px rgba(255, 255, 255, 0.25);
     }
 }
 
