--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -447,6 +447,12 @@
         box-shadow: 0px 15px 50px rgba(0, 0, 0, 0.05),
             inset 0px 22px 35px rgba(255, 255, 255, 0.25);
     }
+
+    .main-hero_item:nth-child(2) {
+        display: flex;
+        justify-content: end;
+        align-items: end;
+    }
 }
 
 @media screen and (max-width:400px) {
